--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://luischdu.github.io/legion-geek",
+  "homepage": "https://luischdu.github.io/legion-geek",
   "name": "legiongeek",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +15,7 @@
     "firebase": "^8.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-quill": "^1.3.5",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
