--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "compressorjs": "^1.0.7",
     "firebase": "^8.6.3",
     "react": "^17.0.2",
+    "react-cloudinary-upload-widget": "^1.4.3",
     "react-dom": "^17.0.2",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.4",
