--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-cloudinary-upload-widget": "^1.4.3",
     "react-dom": "^17.0.2",
+    "react-instagram-embed": "^2.0.0",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
