--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "animejs": "^3.2.1",
     "axios": "^0.21.1",
+    "bad-words": "^3.0.4",
     "compressorjs": "^1.0.7",
     "firebase": "^8.6.3",
+    "firebase-admin": "^9.9.0",
+    "firebase-functions": "^3.14.1",
+    "firebase-functions-test": "^0.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^3.0.4",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
