--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "animejs": "^3.2.1",
+    "aos": "^2.3.4",
     "axios": "^0.21.1",
     "bad-words": "^3.0.4",
     "compressorjs": "^1.0.7",
